# dotfiles

./: .Xmodmap  .ackrc  .bash_aliases  .bash_profile  .bashrc  .ctags  .fdignore  .gitconfig  .gitignore  .ideavimrc  .p10k.zsh  .profile  .shellrc  .tmux.conf  .tmuxline  .vimrc  .vimrc.bak  .vimrc.bundles.local  .vimrc.local  .zshrc  DefaultKeyBinding.dict  Hotkey Window.json  README.md  Session.vim  altwin  com.googlecode.iterm2.plist  ergodox_ez_mac_0LxQ.hex  ergodox_ez_reset_eeprom.hex  iterm_Profiles.json  jupyterlab_keyboard_overrides.json  key_config.ron  keybindings.json  luke-robbyrussell.zsh-theme  pc  pyproject.toml  settings.json  switch_ctrl_alt.sh  terminator.config  tmuxline.theme  userChrome.css  (+2 more)
config-dconf/: user  user.MYP00Y  user.S7F0DZ
material_dark_custom_chrome/: Cached Theme Material Design.pak  Cached Theme.pak  README.md  images.pem  manifest.json  material_dark_custom_chrome.pem
