[tool.poetry]
name = "shell-detector"
version = "0.1.0"
description = "detect interesting seashells in images"
authors = ["Luke Schiefelbein"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"
keras = "^2.3.1"
tensorflow = "^2.2.0"
pillow = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
